# ChecksWriter

./: docker-compose.db.yml  docker-compose.yml  pyproject.toml  run.sh  run_db.sh
docker-build/app/: Dockerfile  Dockerfile_base  Dockerfile_bot  Dockerfile_uploader
src/: .env.template  main.py  run_db.sh  run_services.sh
src/alembic/: env.py
src/alembic/versions/: 2025_06_02_1334-f172863b9ae5_init.py  2025_06_03_1257-cd43dfe509f9_add_celery.py  2025_06_03_1259-e26f619026cb_rename_tales_celery.py  2025_06_03_1437-8bb996ed810b_init.py  2025_06_03_1545-038e7c090166_init.py  2025_06_03_1557-edc52cb09f74_init.py  2025_06_03_1559-c3523a14d299_init.py  2025_06_03_1701-2a72f3cfff27_init.py  2025_06_03_2053-69427ccd51bf_init.py  2025_06_03_2105-5e1eb2164bac_init.py  2025_06_05_1028-066145f99d82_ondelete_cascade.py  2025_06_05_1123-f8bbe0b8a3cc_init.py  2025_06_05_1554-70f79ee60d20_init.py  2025_06_06_1715-9e7435541e93_init.py
src/app/: uploader.py
src/app/bot/: main.py
src/app/bot/handlers/: main.py  other.py
src/app/bot/handlers/user/: __init__.py  categories.py  commands.py  list.py  other.py  photos.py  receipts.py
src/app/bot/keyboards/: user.py
src/app/celery/: celery_app.py  helper.py  tasks.py  worker.py
src/app/parser/: exceptions.py  main.py
src/app/tasks/: image_check.py
src/core/: config.py  decor.py  redis.py
src/core/database/: db_helper.py
src/core/database/DAL/: __init__.py  image_crud.py  receips_crud.py  user_crud.py
src/core/database/models/: __init__.py  base.py  celery.py  images.py  receipts.py  users.py
src/core/database/schemas/: __init__.py  images.py  receipts.py  users.py
src/core/services/: images.py  receipts.py  users.py
src/utils/: case_converter.py
