[project]
name = "checkswriter"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolai Lavrov",email = "mail@nlavrov.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.16.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
