[tool.poetry]
name = "checkswriter"
version = "0.1.0"
description = ""
authors = ["Nikolai Lavrov <mail@nlavrov.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
alembic = "^1.16.1"
sqlalchemy = { version = "^2.0.41", extras = ["asyncio"] }
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
aiogram = "^3.20.0.post0"
asyncpg = "^0.30.0"
undetected-chromedriver = "^3.5.5"
black = "^25.1.0"
celery = {extras = ["redis"], version = "^5.5.3"}
pydantic-extra-types = "^2.10.5"
flower = "^2.0.1"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"